--- a/TrackCTA/app/src/main/res/layout/activity_main.xml
+++ b/TrackCTA/app/src/main/res/layout/activity_main.xml
@@ -4,54 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    
+
     <ListView
+        android:id="@+id/listView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/listview"/>
-
-    <EditText
-        android:id="@+id/stationChoice"
-        android:layout_width="290dp"
-        android:layout_height="50dp"
-        android:ems="10"
-        android:fontFamily="sans-serif-medium"
-        android:inputType="text"
-        android:text="Which station are you using today?"
-        android:textAlignment="center"
+        android:layout_marginTop="100dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/stationChoiceBtn"
-        android:layout_width="102dp"
-        android:layout_height="55dp"
-        android:layout_marginTop="10dp"
-        android:backgroundTint="#00E1FF"
-        android:fontFamily="sans-serif"
-        android:text="Go"
-        android:textColor="#FA0000"
-        android:textColorLink="#9D4242"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="@+id/stationChoice"
-        app:layout_constraintStart_toStartOf="@+id/stationChoice"
-        app:layout_constraintTop_toBottomOf="@+id/stationChoice"
-        app:rippleColor="#00E1FF" />
 
-    <EditText
-        android:id="@+id/output"
-        android:layout_width="250dp"
-        android:layout_height="150dp"
-        android:layout_marginBottom="100dp"
-        android:ems="10"
-        android:gravity="start|top"
-        android:inputType="textMultiLine"
-        android:text="Sample"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-    
-    
 </androidx.constraintlayout.widget.ConstraintLayout>
