--- a/TrackCTA/app/src/main/res/layout/stations_entry.xml
+++ b/TrackCTA/app/src/main/res/layout/stations_entry.xml
@@ -6,8 +6,8 @@
     android:layout_height="wrap_content"
     android:onClick="onClick">
 
-    <ImageView
-        android:id="@+id/imageViewLineColor"
+    <TextView
+        android:id="@+id/textViewLineColor"
         android:layout_width="80dp"
         android:layout_height="96dp"
         android:layout_marginStart="5dp"
@@ -28,15 +28,15 @@
         android:textColor="#5D198E"
         android:textSize="14sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/textViewLineColor"
+        app:layout_constraintBottom_toTopOf="@+id/textViewField"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.05"
-        app:layout_constraintStart_toEndOf="@+id/imageViewLineColor"
-        app:layout_constraintTop_toTopOf="@+id/imageViewLineColor"
+        app:layout_constraintStart_toEndOf="@+id/textViewLineColor"
+        app:layout_constraintTop_toTopOf="@+id/textViewLineColor"
         app:layout_constraintVertical_bias="0.25" />
 
     <TextView
-        android:id="@+id/textViewLineColor"
+        android:id="@+id/textViewField"
         android:layout_width="263dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="12dp"
@@ -44,7 +44,7 @@
         android:textColor="#5D198E"
         android:textSize="14sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/imageViewLineColor"
+        app:layout_constraintBottom_toBottomOf="@+id/textViewLineColor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/textViewMainStationName"
@@ -56,8 +56,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageViewLineColor"
+        app:layout_constraintBottom_toBottomOf="@+id/textViewLineColor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageViewLineColor" />
+        app:layout_constraintTop_toBottomOf="@+id/textViewLineColor" />
 </androidx.constraintlayout.widget.ConstraintLayout>
