--- a/TrackCTA/app/src/main/res/layout/stations_entry.xml
+++ b/TrackCTA/app/src/main/res/layout/stations_entry.xml
@@ -3,61 +3,50 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_height="120dp"
     android:onClick="onClick">
 
     <TextView
         android:id="@+id/textViewLineColor"
         android:layout_width="80dp"
-        android:layout_height="96dp"
-        android:layout_marginStart="5dp"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
+        android:fontFamily="@font/readex_pro_bold"
         android:scaleType="fitXY"
+        android:textAlignment="center"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/textViewMainStationName"
         android:layout_width="263dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
+        android:fontFamily="@font/readex_pro_bold"
         android:text="TextView"
-        android:textColor="#5D198E"
-        android:textSize="14sp"
+        android:textColor="#FFFFFF"
+        android:textSize="18sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/textViewField"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.05"
         app:layout_constraintStart_toEndOf="@+id/textViewLineColor"
-        app:layout_constraintTop_toTopOf="@+id/textViewLineColor"
-        app:layout_constraintVertical_bias="0.25" />
-
-    <TextView
-        android:id="@+id/textViewField"
-        android:layout_width="263dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="12dp"
-        android:text="TextView"
-        android:textColor="#5D198E"
-        android:textSize="14sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/textViewLineColor"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/textViewMainStationName"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.774" />
+        app:layout_constraintTop_toTopOf="@+id/textViewLineColor" />
 
     <ImageView
         android:id="@+id/imageViewEntrySeparator"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        app:layout_constraintBottom_toBottomOf="@+id/textViewLineColor"
+        android:layout_marginBottom="5dp"
+        android:backgroundTint="@color/white"
+        android:visibility="visible"
+        app:layout_constraintTop_toBottomOf="@+id/textViewLineColor"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewLineColor" />
+        app:srcCompat="@drawable/separator" />
 </androidx.constraintlayout.widget.ConstraintLayout>
