--- a/TrackCTA/app/src/main/res/layout/stations_entry.xml
+++ b/TrackCTA/app/src/main/res/layout/stations_entry.xml
@@ -3,50 +3,123 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
-    android:layout_height="120dp"
+    android:layout_height="wrap_content"
     android:onClick="onClick">
 
     <TextView
-        android:id="@+id/textViewLineColor"
-        android:layout_width="80dp"
+        android:id="@+id/textViewMainStationName"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="5dp"
+        android:layout_marginTop="10dp"
         android:fontFamily="@font/readex_pro_bold"
-        android:scaleType="fitXY"
-        android:textAlignment="center"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        android:text="station"
+        android:textColor="#FFFFFF"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:layout_marginStart="5dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+         />
 
     <TextView
-        android:id="@+id/textViewMainStationName"
-        android:layout_width="263dp"
+        android:visibility="gone"
+        android:id="@+id/textViewLineColor1"
+        android:padding="5dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
+        android:textSize="20sp"
         android:fontFamily="@font/readex_pro_bold"
-        android:text="TextView"
-        android:textColor="#FFFFFF"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.05"
-        app:layout_constraintStart_toEndOf="@+id/textViewLineColor"
-        app:layout_constraintTop_toTopOf="@+id/textViewLineColor" />
+        android:scaleType="fitXY"
+        android:text="color"
+        android:textAlignment="center"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewMainStationName"/>
+
+    <TextView
+        android:visibility="gone"
+
+        android:id="@+id/textViewLineColor2"
+        android:padding="5dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="20sp"
+        android:fontFamily="@font/readex_pro_bold"
+        android:scaleType="fitXY"
+        android:text="color"
+        android:textAlignment="center"
+        app:layout_constraintStart_toEndOf="@+id/textViewLineColor1"
+        app:layout_constraintTop_toBottomOf="@+id/textViewMainStationName"/>
+
+    <TextView
+        android:visibility="gone"
+
+        android:id="@+id/textViewLineColor3"
+        android:padding="5dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="20sp"
+        android:fontFamily="@font/readex_pro_bold"
+        android:scaleType="fitXY"
+        android:text="color"
+        android:textAlignment="center"
+        app:layout_constraintStart_toEndOf="@+id/textViewLineColor2"
+        app:layout_constraintTop_toBottomOf="@+id/textViewMainStationName"/>
+
+    <TextView
+        android:visibility="gone"
+
+        android:id="@+id/textViewLineColor4"
+        android:padding="5dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="20sp"
+        android:fontFamily="@font/readex_pro_bold"
+        android:scaleType="fitXY"
+        android:text="color"
+        android:textAlignment="center"
+        app:layout_constraintStart_toEndOf="@+id/textViewLineColor3"
+        app:layout_constraintTop_toBottomOf="@+id/textViewMainStationName"/>
+
+    <TextView
+        android:visibility="gone"
+
+        android:id="@+id/textViewLineColor5"
+        android:padding="5dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="20sp"
+        android:fontFamily="@font/readex_pro_bold"
+        android:scaleType="fitXY"
+        android:text="color"
+        android:textAlignment="center"
+        app:layout_constraintStart_toEndOf="@+id/textViewLineColor4"
+        app:layout_constraintTop_toBottomOf="@+id/textViewMainStationName"/>
+
+    <TextView
+        android:visibility="gone"
+
+        android:id="@+id/textViewLineColor6"
+        android:padding="5dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="20sp"
+        android:fontFamily="@font/readex_pro_bold"
+        android:scaleType="fitXY"
+        android:text="color"
+        android:textAlignment="center"
+        app:layout_constraintStart_toEndOf="@+id/textViewLineColor5"
+        app:layout_constraintTop_toBottomOf="@+id/textViewMainStationName"/>
 
     <ImageView
         android:id="@+id/imageViewEntrySeparator"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="5dp"
         android:backgroundTint="@color/white"
         android:visibility="visible"
-        app:layout_constraintTop_toBottomOf="@+id/textViewLineColor"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="20dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewLineColor1"
         app:srcCompat="@drawable/separator" />
 </androidx.constraintlayout.widget.ConstraintLayout>
