--- a/TrackCTA/app/src/main/res/layout/activity_stops.xml
+++ b/TrackCTA/app/src/main/res/layout/activity_stops.xml
@@ -9,6 +9,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="100dp"
+        android:background="@color/teal_700"
+        android:backgroundTint="#0EC2D5"
+        android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
