--- a/TrackCTA/app/src/main/res/layout/activity_stops.xml
+++ b/TrackCTA/app/src/main/res/layout/activity_stops.xml
@@ -2,17 +2,18 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/black"
+    android:backgroundTint="@color/black"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <ListView
         android:id="@+id/stopsList"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
-        android:background="@color/teal_700"
-        android:backgroundTint="#0EC2D5"
+        android:background="#545454"
+        android:backgroundTint="#545454"
         android:textAlignment="center"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
