--- a/TrackCTA/app/src/main/res/layout/display_stops.xml
+++ b/TrackCTA/app/src/main/res/layout/display_stops.xml
@@ -9,6 +9,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="100dp"
+        android:background="@color/black"
+        android:backgroundTint="#545454"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
