--- a/TrackCTA/app/src/main/res/layout/list_item.xml
+++ b/TrackCTA/app/src/main/res/layout/list_item.xml
@@ -8,39 +8,27 @@
     tools:ignore="UselessParent"
     >
 
-    <ImageView
-        android:id="@+id/imageViewList"
-        android:layout_width="84dp"
-        android:layout_height="84dp"
-        android:padding="16dp"
-        tools:ignore="ContentDescription" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center_vertical"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:backgroundTint="@color/black">
 
         <TextView
             android:id="@+id/textView1List"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:gravity="bottom|left"
-            android:textColor="@android:color/black"
-            android:textSize="18sp"
+            android:fontFamily="@font/readex_pro_bold"
+            android:textAlignment="center"
+            android:textColor="@color/white"
+            android:textSize="20sp"
             android:textStyle="bold"
             tools:ignore="RtlHardcoded" />
 
-        <TextView
-            android:id="@+id/textView2List"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
-            android:gravity="top|left"
-            android:textColor="@android:color/black"
-            android:textSize="14sp"
-            tools:ignore="RtlHardcoded" />
+
 
     </LinearLayout>
 
