--- a/TrackCTA/app/src/main/res/layout/activity_stops.xml
+++ b/TrackCTA/app/src/main/res/layout/activity_stops.xml
@@ -2,17 +2,19 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/black"
-    android:backgroundTint="@color/black"
+    android:background="#000000"
+    android:backgroundTint="#000000"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <ListView
         android:id="@+id/stopsList"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
+        android:layout_height="match_parent"
+        android:layout_marginTop="80dp"
         android:background="#545454"
         android:backgroundTint="#545454"
+        android:divider="@color/white"
+        android:dividerHeight="3dp"
         android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
