--- a/TrackCTA/app/src/main/res/layout/activity_arrivals.xml
+++ b/TrackCTA/app/src/main/res/layout/activity_arrivals.xml
@@ -5,10 +5,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#000000"
+    android:backgroundTint="#000000"
     tools:context=".ArrivalsActivity">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
+        android:background="#545454"
+        android:backgroundTint="#545454"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="100dp"
