--- a/TrackCTA/app/src/main/res/layout/arrivals_entry.xml
+++ b/TrackCTA/app/src/main/res/layout/arrivals_entry.xml
@@ -2,63 +2,45 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="15dp">
 
-    <ImageView
-        android:id="@+id/imageViewEntryCTA"
-        android:layout_width="80dp"
-        android:layout_height="96dp"
-        android:layout_marginStart="5dp"
-        android:layout_marginBottom="5dp"
-        android:scaleType="fitXY"
+    <TextView
+        android:id="@+id/textViewRunColor"
+        android:layout_width="20dp"
+        android:layout_height="80dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         />
 
     <TextView
         android:id="@+id/textViewRunNumber"
-        android:layout_width="263dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
+        android:fontFamily="@font/readex_pro_bold"
         android:text="TextView"
-        android:textColor="#5D198E"
-        android:textSize="14sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/textViewArrivalTime"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.05"
-        app:layout_constraintStart_toEndOf="@+id/imageViewEntryCTA"
-        app:layout_constraintTop_toTopOf="@+id/imageViewEntryCTA"
-        app:layout_constraintVertical_bias="0.25" />
+        android:textColor="#FFFFFF"
+        android:textSize="25sp"
+        android:textStyle="italic"
+        android:layout_marginStart="20dp"
+        app:layout_constraintStart_toEndOf="@+id/textViewRunColor"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textViewArrivalTime"
-        android:layout_width="263dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="12dp"
-        android:text="TextView"
-        android:textColor="#5D198E"
-        android:textSize="14sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/imageViewEntryCTA"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/textViewRunNumber"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.774" />
-
-    <ImageView
-        android:id="@+id/imageViewEntrySeparator"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageViewEntryCTA"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageViewEntryCTA"
-        />
+        android:text="TextView"
+        android:textColor="#FFFFFF"
+        android:textSize="25sp"
+        android:textStyle="bold"
+        android:fontFamily="@font/readex_pro_bold"
+        android:textAlignment="center"
+
+        app:layout_constraintTop_toBottomOf="@id/textViewRunNumber"
+        app:layout_constraintStart_toStartOf="@id/textViewRunNumber"
+         />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
