--- a/TrackCTA/app/src/main/res/layout/list_item.xml
+++ b/TrackCTA/app/src/main/res/layout/list_item.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="200dp"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
     tools:ignore="UselessParent">
@@ -27,17 +27,18 @@
             android:textSize="35sp"
             android:textStyle="bold"
             android:verticalScrollbarPosition="right"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/textViewColor4List"
+            android:layout_marginTop="2dp"
+            android:layout_marginBottom="10dp"
             />
 
         <TextView
             android:id="@+id/textViewColor1List"
             android:layout_width="0dp"
-            android:layout_height="12dp"
+            android:layout_height="16dp"
             android:fontFamily="@font/readex_pro_bold"
             android:padding="5dp"
             android:scaleType="fitXY"
@@ -52,7 +53,7 @@
         <TextView
             android:id="@+id/textViewColor2List"
             android:layout_width="0dp"
-            android:layout_height="12dp"
+            android:layout_height="16dp"
             android:fontFamily="@font/readex_pro_bold"
             android:padding="5dp"
             android:scaleType="fitXY"
@@ -68,7 +69,7 @@
         <TextView
             android:id="@+id/textViewColor3List"
             android:layout_width="0dp"
-            android:layout_height="12dp"
+            android:layout_height="16dp"
             android:fontFamily="@font/readex_pro_bold"
             android:padding="5dp"
             android:scaleType="fitXY"
@@ -84,7 +85,7 @@
         <TextView
             android:id="@+id/textViewColor4List"
             android:layout_width="0dp"
-            android:layout_height="12dp"
+            android:layout_height="16dp"
             android:fontFamily="@font/readex_pro_bold"
             android:padding="5dp"
             android:scaleType="fitXY"
