--- a/TrackCTA/app/src/main/res/layout/visualizer_activity.xml
+++ b/TrackCTA/app/src/main/res/layout/visualizer_activity.xml
@@ -3,7 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/black"
+    android:backgroundTint="@color/black">
 
     <ImageView
         android:id="@+id/imageViewS4"
@@ -89,15 +91,14 @@
         android:layout_height="50dp"
         android:layout_marginTop="20dp"
         app:layout_constraintEnd_toEndOf="@+id/imageViewTrain"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/imageViewTrain"
         app:layout_constraintTop_toBottomOf="@+id/imageViewTrain"
         app:srcCompat="@android:drawable/ic_delete" />
 
     <ImageView
         android:id="@+id/imageViewTrain"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="120dp"
+        android:layout_height="100dp"
         android:layout_marginTop="100dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -107,10 +108,15 @@
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
-        android:layout_height="50dp"
+        android:layout_height="wrap_content"
         android:text="TextView"
+        android:textColor="@color/white"
+        android:fontFamily="@font/readex_pro_bold"
+        android:textSize="25dp"
+        android:textAlignment="center"
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageViewS7"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageViewS6" />
 </androidx.constraintlayout.widget.ConstraintLayout>
