adds welcome page - ALL app components/functions are now implemented

--- a/TrackCTA/app/src/main/res/layout/activity_main.xml
+++ b/TrackCTA/app/src/main/res/layout/activity_main.xml
@@ -5,14 +5,39 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:onClick="startStationsActivity"
-        android:text="Button"
+    <ImageView
+        android:id="@+id/imageViewChicagoBackdrop"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:scaleType="centerCrop"
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.509"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.51"
+        app:srcCompat="@drawable/chicago_train" />
+
+
+    <Button
+        android:id="@+id/button"
+
+
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:onClick="startStationsActivity"
+        android:text="FIND MY STATION"
+        android:textAlignment="center"
+        android:textSize="30dp"
+        android:fontFamily="@font/readex_pro_bold"
+        android:backgroundTint="#11F0F7"
+        android:textColor="#BD2845"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="220dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+
