--- a/TrackCTA/app/src/main/res/layout/list_item.xml
+++ b/TrackCTA/app/src/main/res/layout/list_item.xml
@@ -19,6 +19,8 @@
             android:id="@+id/textView1List"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="2dp"
+            android:layout_marginBottom="10dp"
             android:fontFamily="@font/readex_pro_bold"
             android:scrollbars="vertical"
             android:text="stop"
@@ -30,10 +32,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/textViewColor4List"
-            android:layout_marginTop="2dp"
-            android:layout_marginBottom="10dp"
-            />
+            app:layout_constraintTop_toBottomOf="@id/textViewColor4List" />
 
         <TextView
             android:id="@+id/textViewColor1List"
@@ -97,9 +96,6 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/textViewColor3List" />
-
-
-
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
